[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/GUI/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/Level1.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/world/background.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/world/frame.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/world/level_01-bg.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Gaegu-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/Managers/AudioManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/vfx/fire.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 120
extra_spacing_top = -20
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 118, 118 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 118, 0, 118, 118 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 236, 0, 118, 118 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 354, 0, 118, 118 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Burn",
"speed": 8.0
} ]

[node name="Level1" type="Node2D"]
script = ExtResource( 3 )

[node name="GUI" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="frame" type="Sprite" parent="."]
position = Vector2( 960, 446.624 )
texture = ExtResource( 5 )

[node name="level_01-bg" type="Sprite" parent="frame"]
position = Vector2( 434, 63.2543 )
texture = ExtResource( 6 )

[node name="CharacterA" parent="." instance=ExtResource( 1 )]
position = Vector2( 513.866, 511.07 )

[node name="CharacterB" parent="." instance=ExtResource( 1 )]
position = Vector2( 818.906, 511.07 )

[node name="CharacterC" parent="." instance=ExtResource( 1 )]
position = Vector2( 1121.18, 511.07 )

[node name="Final" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 882.918
margin_top = 138.901
margin_right = 1282.92
margin_bottom = 239.901
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.133333, 0.137255, 0.137255, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="AudioManager" parent="." instance=ExtResource( 8 )]

[node name="Fire" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 6 )
animation = "Burn"
frame = 1
